--- a/index.ipynb
+++ b/index.ipynb
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = n"
+    "recoleta_marker = neighborhood_markers()"
    ]
   },
   {
